feat: implement paginated endpoints with fixed server-side sorting
- Refactored controller to use explicit request parameters for cleaner Swagger UI
- Enforced business-rule sorting in service layer for consistent API responses